# BUHOchat

./: README.md  app.py  env.example  index.html  pyproject.toml  requirements.txt  script.js  style.css  styles.css
Esquemas temporales/: panel movil.html
backend firebase/models/: persona.py
backend firebase/presentation/: Empleador.py
backend firebase/services/: firebase_client.py
backend firebase/ui/: sistema.py
chat/: script.js  style.css
static/css/: account.css  chat.css  main.css
static/js/: auth.js  chat.js  navigation.js
templates/: account.html  index.html
utils/: ollama_client.py  scraper.py  search_tool.py
